--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.14.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
