--- a/AuthorizationService/pom.xml
+++ b/AuthorizationService/pom.xml
@@ -70,11 +70,16 @@
 <!--			<scope>runtime</scope>-->
 <!--		</dependency>-->
 
+<!--		<dependency>-->
+<!--		<groupId>com.h2database</groupId>-->
+<!--		<artifactId>h2</artifactId>-->
+<!--		<scope>runtime</scope>-->
+<!--	</dependency>-->
+
 		<dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<scope>runtime</scope>
-	</dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
